fixed description and likes spacing within panel body for the map

--- a/src/frontend/sass/park-list-panel.scss
+++ b/src/frontend/sass/park-list-panel.scss
@@ -10,7 +10,7 @@
     main {
       width: 50%;
     }
-    
+
     ul {
       padding-left: 0;
       list-style: none;
@@ -23,9 +23,8 @@
 
     main {
       margin-right: 1em;
-      width: 100%;
     }
-    
+
     main button {
       width: 5em;
     }
